--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_APPNAME=Demo
 VITE_VERSION=1.0.0
-VITE_API_SERVER=http://127.0.0.1:8000/   
+VITE_API_SERVER=https://preferences-backend-jahanai.onrender.com  
